--- a/ui/button/button.html
+++ b/ui/button/button.html
@@ -4,23 +4,24 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>文本编辑</title>
         <link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
-		<link href="../../py/resources/share/button/button.css" rel="stylesheet" type="text/css" />
-        <link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
+		<link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/control/icons.css" rel="stylesheet" type="text/css" />
-		<link href="../../py/resources/default/button/button.css" rel="stylesheet" type="text/css" />
+		<link href="../../py/resources/share/button/button.css" rel="stylesheet" type="text/css" />
+        <link href="../../py/resources/default/button/button.css" rel="stylesheet" type="text/css" />
 		
         <script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/Element.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/ContentControl.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Button.js" type="text/javascript"></script>
+		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/contentcontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/button.js" type="text/javascript"></script>
 		
-		<script src="../assets/scripts/ui.js" type="text/javascript"></script>
-		<script src="../assets/scripts/common.js" type="text/javascript"></script>
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
 		
 		<script>
 			
-			debugger;
-			imports("resources.*.starmarker");
+			
 			function changeState(value){
 				this.parentNode.parentNode.className = value ? this.parentNode.parentNode.className + ' x-active' : this.parentNode.parentNode.className.replace(/ x\-active/g, "") ;
 			}
