--- a/ui/button/contextmenustrip.html
+++ b/ui/button/contextmenustrip.html
@@ -5,26 +5,28 @@
    		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>控件</title>
         <link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
+		<link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/share/control/shadow.css" rel="stylesheet" type="text/css" />
-		<link href="../../py/resources/share/button/contextmenustrip.css" rel="stylesheet" type="text/css" />
-        <link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/control/shadow.css" rel="stylesheet" type="text/css" />
-		<link href="../../py/resources/default/button/contextmenustrip.css" rel="stylesheet" type="text/css" />
+		<link href="../../py/resources/share/button/contextmenustrip.css" rel="stylesheet" type="text/css" />
+        <link href="../../py/resources/default/button/contextmenustrip.css" rel="stylesheet" type="text/css" />
 		
         <script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/Element.js" type="text/javascript"></script>
-		<script src="../../py/System/Fx/Base.js" type="text/javascript"></script>
-		<script src="../../py/System/Fx/Element.js" type="text/javascript"></script>
-		<script src="../../py/System/Data/CollectionBase.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Surround.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/ListControl.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Shadow.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Menu.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/ContextMenu.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/ContextMenu.js" type="text/javascript"></script>
+		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/fx/base.js" type="text/javascript"></script>
+		<script src="../../py/system/fx/animate.js" type="text/javascript"></script>
+		<script src="../../py/system/data/collectionbase.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/surround.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/listcontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/shadow.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/menu.js" type="text/javascript"></script>
+		<script src="../../py/system/dom/contextmenu.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/contextmenu.js" type="text/javascript"></script>
 		
-		<script src="../../test/assets/scripts/debug.js" type="text/javascript"></script>
-		<script src="../assets/scripts/common.js" type="text/javascript"></script>
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
+		
 	</head>
 
 <body>
