--- a/ui/button/toolstrip.html
+++ b/ui/button/toolstrip.html
@@ -14,19 +14,15 @@
         <link href="../../py/resources/default/button/splitbutton.css" rel="stylesheet" type="text/css" />
        
         <script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/Element.js" type="text/javascript"></script>
-		<script src="../../py/System/Data/CollectionBase.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Surround.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Layout/LayoutEngine.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Layout/MenuLayout.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/ContainerControl.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Shadow.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Menu.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/ContextMenu.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/ContextMenu.js" type="text/javascript"></script>
+		<script src="../../py/system/data/collectionbase.js" type="text/javascript"></script>
+		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/iformcontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/textbox.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/combinedtextbox.js" type="text/javascript"></script>
 		
-		<script src="../../test/assets/scripts/debug.js" type="text/javascript"></script>
-		<script src="../assets/scripts/common.js" type="text/javascript"></script>
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
 	
 		<script>
 			
