--- a/ui/container/accordion.html
+++ b/ui/container/accordion.html
@@ -4,20 +4,29 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>面板</title>
         <link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
-        <link href="../../py/resources/share/container/accordion.css" rel="stylesheet" type="text/css" />
         <link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
-		<link href="../../py/resources/default/container/accordion.css" rel="stylesheet" type="text/css" />
+		<link href="../../py/resources/share/container/accordion.css" rel="stylesheet" type="text/css" />
+        <link href="../../py/resources/default/container/accordion.css" rel="stylesheet" type="text/css" />
        
 	   	<script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/Element.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Surround.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Resizing.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Layout/LayoutEngine.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Layout/AdvanceLayout.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/Layout/accordionlayout.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/accordion.js" type="text/javascript"></script>
+		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/surround.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/resizing.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/layout/layoutengine.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/layout/advancelayout.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/layout/accordionlayout.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/accordion.js" type="text/javascript"></script>
 		
-		<script src="../assets/scripts/common.js" type="text/javascript"></script>
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
+		
+		<script>
+			
+			
+			
+		</script>
     </head>
     <body>
 		<div style="width: 300px; float: left; margin: 5px;" class="x-accordion">
