--- a/ui/dataview/treeview.html
+++ b/ui/dataview/treeview.html
@@ -4,24 +4,26 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>树视图</title>
 		<link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
-		<link href="../../py/resources/share/dataview/treeview.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
+		<link href="../../py/resources/share/dataview/treeview.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/dataview/treeview.css" rel="stylesheet" type="text/css" />
 		
         <script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/Data/CollectionBase.js" type="text/javascript"></script>
+		<script src="../../py/system/data/collectionbase.js" type="text/javascript"></script>
 		
-		<script src="../../py/System/Dom/Element.js" type="text/javascript"></script>
+		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
 		
-		<script src="../../py/System/Fx/Base.js" type="text/javascript"></script>
-		<script src="../../py/System/Fx/Element.js" type="text/javascript"></script>
+		<script src="../../py/system/fx/base.js" type="text/javascript"></script>
+		<script src="../../py/system/fx/animate.js" type="text/javascript"></script>
 		
-		<script src="../../py/System/Controls/ICollapsable.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/ContentControl.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/ListControl.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/treeview.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/icollapsable.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/contentcontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/listcontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/treeview.js" type="text/javascript"></script>
 		
-		<script src="../assets/scripts/common.js" type="text/javascript"></script>
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
 		
 		
 		<script>
