--- a/ui/form/checkbox.html
+++ b/ui/form/checkbox.html
@@ -7,12 +7,14 @@
 		<link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
 		
         <script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/Element.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/ContentControl.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/IFormControl.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/checkbox.js" type="text/javascript"></script>
-		<script src="../assets/scripts/ui.js" type="text/javascript"></script>
-		<script src="../assets/scripts/common.js" type="text/javascript"></script>
+		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/contentcontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/iformcontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/checkbox.js" type="text/javascript"></script>
+		
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
 		
 		<script>
 			a = new CheckBox({
