--- a/ui/form/monthcalender.html
+++ b/ui/form/monthcalender.html
@@ -8,14 +8,16 @@
 		<link href="../../py/resources/default/form/monthcalender.css" rel="stylesheet" type="text/css" />
 		
 		<script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/Element.js" type="text/javascript"></script>
-		<script src="../../py/System/Fx/Base.js" type="text/javascript"></script>
-		<script src="../../py/System/Fx/Element.js" type="text/javascript"></script>
-		<script src="../../py/System/Core/Date.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/MonthCalender.js" type="text/javascript"></script>
+		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/fx/base.js" type="text/javascript"></script>
+		<script src="../../py/system/fx/animate.js" type="text/javascript"></script>
+		<script src="../../py/system/core/date.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/monthcalender.js" type="text/javascript"></script>
 		
-		<script src="../../test/assets/scripts/debug.js" type="text/javascript"></script>
-		<script src="../assets/scripts/common.js" type="text/javascript"></script>
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
 		
 		<script>
 			
