--- a/ui/form/textbox.html
+++ b/ui/form/textbox.html
@@ -4,19 +4,20 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>文本编辑</title>
         <link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
-		<link href="../../py/resources/share/form/textbox.css" rel="stylesheet" type="text/css" />
-        <link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
+		<link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/control/icons.css" rel="stylesheet" type="text/css" />
-		<link href="../../py/resources/default/form/textbox.css" rel="stylesheet" type="text/css" />
+		<link href="../../py/resources/share/form/textbox.css" rel="stylesheet" type="text/css" />
+        <link href="../../py/resources/default/form/textbox.css" rel="stylesheet" type="text/css" />
 		
         <script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/Element.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/IFormControl.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/TextBoxBase.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/TextBox.js" type="text/javascript"></script>
+		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/iformcontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/textbox.js" type="text/javascript"></script>
 		
-		<script src="../assets/scripts/ui.js" type="text/javascript"></script>
-		<script src="../assets/scripts/common.js" type="text/javascript"></script>
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
 		
 		
 		<script>
