--- a/ui/viewer/scrollbar.html
+++ b/ui/viewer/scrollbar.html
@@ -9,16 +9,23 @@
 		<link href="../../py/resources/default/viewer/scrollbar.css" rel="stylesheet" type="text/css" />
 		
         <script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/Element.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/Drag.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/scrollbar.js" type="text/javascript"></script>
+		<script src="../../py/System/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/dom/drag.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/scrollbar.js" type="text/javascript"></script>
 		
-		<script src="../../test/assets/scripts/debug.js" type="text/javascript"></script>
-		<script src="../assets/scripts/common.js" type="text/javascript"></script>
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
     <script type="text/javascript">
     
       	a = new ScrollBar({
 			barSize: 300,
+			renderTo: true
+		});
+		
+		c =  new ScrollBar({
+			barSize: 300,
+			  direction: 'horizonal',
 			renderTo: true
 		});
    
@@ -28,7 +35,7 @@
 <body>
 	
 	
-	<div class="x-scrollbar x-scrollbar-horizal" style="width: 200px; ">
+	<div class="x-scrollbar x-scrollbar-horizonal" style="width: 200px; ">
 	    <div style="width: 47px; left: 17px; z-index: auto; opacity: 1; top: 0px;" class="x-scrollbar-handle ">
 	        <div class="x-scrollbar-handle-left"></div>
 	        <div class="x-scrollbar-handle-center"></div>
