--- a/ui/viewer/tooltip.html
+++ b/ui/viewer/tooltip.html
@@ -5,17 +5,19 @@
    		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>控件</title>
         <link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
-        <link href="../../py/resources/share/viewer/tooltip.css" rel="stylesheet" type="text/css" />
         <link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
-		<link href="../../py/resources/default/viewer/tooltip.css" rel="stylesheet" type="text/css" />
+		<link href="../../py/resources/share/viewer/tooltip.css" rel="stylesheet" type="text/css" />
+        <link href="../../py/resources/default/viewer/tooltip.css" rel="stylesheet" type="text/css" />
         
-         <script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/Element.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/ContentControl.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/tooltip.js" type="text/javascript"></script>
+		<script src="../../py/system.js" type="text/javascript"></script>
+		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/contentcontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/tooltip.js" type="text/javascript"></script>
 		
-		<script src="../../test/assets/scripts/debug.js" type="text/javascript"></script>
-		<script src="../assets/scripts/common.js" type="text/javascript"></script>
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
     <script type="text/javascript">
     
        new ToolTip({
